--- a/templates/movies.html
+++ b/templates/movies.html
@@ -14,7 +14,7 @@
     
     {% endif %}
 
-    <h2><a href='/add'>add movie</a></h2>
+    <h2><a href='/add'>Add another movie to the list</a></h2>
 
 
 {% endblock %}
