--- a/templates/search.html
+++ b/templates/search.html
@@ -2,8 +2,14 @@
 
 {% block content %}
 
-    <h2>Search things here</h2>
+    <h1>Search for a movie</h1>
+    <div class="form">
     <form action="/search" method="post">
+
+        <div class="inner-wrap">
+
+        <span class="error">{{empty_error}}</span>
+
         <p>
             <label>movie title
             <input name="title" type="text" value="{{title}}">
@@ -33,11 +39,15 @@
             <input name="genre" type="text" value="{{genre}}">
             </label>
         </p>
-            
+        </div>
+        <div class="submit">  
         <input type='submit' value="Search database">
+        </div>
     
     </form>
 
     <span class="error">{{except_error}}</span>
 
+    </div>
+    
 {% endblock %}
